# omnimemory

./: .env.example  .gitignore  IMPLEMENTATION_QUICK_START.md  LICENSE  MCP_ARCHITECTURE_SUMMARY.md  MCP_INTEGRATION_ARCHITECTURE.md  QUICK_START.md  README.md  docker-compose.yml  launch.sh  logs.sh  restart.sh  start.sh  status-all.sh  status.sh  stop-all.sh  stop.sh
mcp_server/: ADVANCED_COMPRESSOR_README.md  CACHE_TOOLS_TEST_REPORT.md  CLEANUP_DAEMON_INTEGRATION.md  GATEWAY_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  MCP_CLIENT_LIMITATION.md  MCP_CONFIGS.md  MCP_TOOLS_OPENAPI.yaml  MEMORIES_IMPLEMENTATION_GUIDE.md  MEMORY_BANK_README.md  PARAMETER_ROUTING_GUIDE.md  PHASE_2_COMPLETION_REPORT.md  PHASE_5B_TEST_REPORT.md  PROGRESSIVE_DISCLOSURE.md  QUICKSTART.md  QUICK_REFERENCE.md  RATE_LIMITING.md  README.md  README_DEV.md  REST_API_README.md  RESULT_STORE_README.md  SLEEP_CONSOLIDATION.md  SMART_READ_USAGE.md  SNIPPET_EXTRACTOR_README.md  WORKFLOW_PATTERN_MINER.md  ZERO_NEW_TOOLS_DEMO.md  advanced_compressor.py  advanced_compressor_integration.py  agent_memory_manager.py  auto_result_handler.py  claude_config.json  code_executor.py  config.py  consolidate_tools.py  context_injector.py  context_merger.py  context_preloader.py  demo_context_preloader.py  demo_sleep_consolidation.py  (+91 more)
mcp_server/launchers/: launch_chatgpt.sh  launch_claude.sh  launch_codex.sh  launch_cursor.sh
mcp_server/tests/: OMN1_CONSOLIDATED_TOOLS_TEST_REPORT.md  __init__.py  conftest.py  test_e2e_smart_read.py  test_hot_cache.py  test_omn1_consolidated_tools.py  test_omn1_tools_integration.py  test_omn1_tools_simple.py  test_redis_integration.py  test_smart_read_integration.py  test_tri_index_integration.py  test_unified_cache_manager.py
omnimemory-cli/: CLI_IMPLEMENTATION_GUIDE.md  Cargo.toml  README.md  SNAPSHOT_IMPLEMENTATION_COMPLETE.md  build.sh  test.sh  validate.sh
omnimemory-cli/.claude/: settings.local.json
omnimemory-cli/config_templates/: README.md  claude_md_active_mode.md  claude_md_snippet.md  config.toml  cursor_instructions_active_mode.md  mcp_entry.json
omnimemory-cli/src/: main.rs
omnimemory-compression/: ADAPTIVE_COMPRESSION.md  COMMERCIAL_FEATURES.md  COMPREHENSIVE_TEST_REPORT.md  CONTENT_AWARE_COMPRESSION.md  DEVELOPMENT.md  ECOSYSTEM_INTEGRATION.md  FILES_CREATED.txt  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_GUIDE.md  INSTALLATION.md  PERFORMANCE_TEST_REPORT.md  QUICK_START.md  README.md  README_ENTERPRISE_TOKENIZER.md  ROADMAP.md  SDK_IMPLEMENTATION_COMPLETE.md  SDK_README.md  TEST_REPORT.md  WEEK2_TEST_REPORT.md  dev.sh  example.py  example_cdc.py  example_content_aware.py  example_enterprise.py  pyproject.toml  requirements.txt  test_cache_complete.py  test_commercial_features.py  test_fastcdc_complete.py  test_header_tracking.py  test_multi_agent_features.py  test_performance_comprehensive.py  test_quality_validation.py  test_registry.py  test_server_auth.py  test_tokenizer_complete.py  test_week2_e2e.py
omnimemory-compression/examples/: api_key_management.py  error_handling_example.py  installation_test.py  langchain_example.py  langchain_usage.py  llamaindex_example.py  multi_agent_example.py  python_sdk_example.py
omnimemory-compression/sdk/: README.md  pyproject.toml  setup.py
omnimemory-compression/src/: __init__.py  adaptive_policy.py  admin_cli.py  agent_memory.py  auth.py  cache_manager.py  cdc_tokenizer.py  chunker.py  cli.py  code_parser.py  compression_server.py  compression_strategies.py  config.py  content_detector.py  langchain_adapter.py  memory_layers.py  model_registry.py  rate_limiter.py  tokenizer.py  usage_tracker.py  validator.py  visiondrop.py
omnimemory-compression/tests/: test_adaptive_policy.py  test_compression_quality.py  test_compression_strategies.py  test_content_detector.py  test_decompression.py
omnimemory-embeddings/: API_ENDPOINTS.md  README.md  USAGE_EXAMPLES.md  pyproject.toml  requirements.txt  test_mlx_service.py  test_no_torch.py  test_provider_abstraction.py  test_startup.py  verify_fix.py
omnimemory-embeddings/models/: README.md
omnimemory-embeddings/src/: __init__.py  api_server.py  cloud_embedding_fallback.py  mlx_embedding_service.py  py38_compat.py
omnimemory-evaluation/: README.md  pyproject.toml  run.sh
omnimemory-evaluation/src/: __init__.py  data_store.py  evaluation_server.py
omnimemory-evaluation/tests/: test_benchmarks.py
omnimemory-init-cli/: .env.example  CONFIGURATOR_FIX_COMPLETE.md  DELIVERY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROMPT_INJECTION_SUMMARY.md  README.md  USAGE_EXAMPLES.md  demo.sh  install.sh  omni_init.py  pyproject.toml  update_configurators.py
omnimemory-init-cli/src/: __init__.py
omnimemory-init-cli/tests/: __init__.py  test_configurators.py
omnimemory-metrics-service/: .gitignore  ARCHITECTURE_DIAGRAM.md  DATABASE_SETUP.md  HYBRID_QUERY_README.md  IMPLEMENTATION_WEEK3_DAY2-3.md  MIGRATION.md  PHASE2_ENDPOINTS.md  QUICKSTART_RESPONSE_CACHE.md  README.md  RESPONSE_CACHE_README.md  SESSION_DEDUPLICATION_TEST_REPORT.md  TENANT_SETTINGS_USAGE.md  TEST_REPORT_DELTA_TRACKING.md  TEST_REPORT_MULTI_TENANCY_BACKWARDS_COMPATIBILITY.md  TEST_REPORT_RESPONSE_CACHE.md  WEBSOCKET_GUIDE.md  alembic.ini  pyproject.toml  run.sh  test_cache_debug.py  test_cache_endpoint_e2e.py  test_cache_endpoint_manual.py  test_database.py  test_delta_integration.py  test_delta_tracking.py  test_endpoint_live.py  test_hybrid_query.py  test_schema.py  test_session_cleanup.py  test_session_context_endpoints.py  test_temporal_resolver.py  test_tool_operation_endpoints.py
omnimemory-metrics-service/alembic/: env.py
omnimemory-metrics-service/docs/: API.md
omnimemory-metrics-service/examples/: hybrid_query_usage.py  response_cache_demo.py  temporal_resolver_usage.py
omnimemory-metrics-service/migrations/: 001_create_response_cache.py  002_add_process_id.py  003_create_sessions_table.py  004_create_tool_operations_table.py  README.md
omnimemory-procedural/: README.md  WORKFLOW_LEARNER.md  pyproject.toml  requirements.txt  test_basic.py  test_workflow_learner.py
(+321 files in other folders)
