[project]
name = "omnimemory-mcp"
version = "1.0.0"
description = "MCP server for OmniMemory services"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.5.0",
    "qdrant-client>=1.7.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "slowapi>=0.1.9",
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
    "numpy>=1.24.0",
    "rapidfuzz>=3.0.0",
    "redis>=5.0.0",
    "lz4>=4.3.0"
]

[project.scripts]
omnimemory-mcp = "omnimemory_gateway:main"
