[package]
name = "omnimemory-cli"
version = "0.1.0"
edition = "2021"
authors = ["OmniMemory Team"]
description = "CLI interface for OmniMemory - AI-powered command suggestion and failure analysis"
license = "MIT"

[[bin]]
name = "omni"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
colored = "2.0"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
configparser = "3.0"
env_logger = "0.10"
log = "0.4"
atty = "0.2"
itertools = "0.12"
titlecase = "3.0"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
serde_yaml = "0.9"
fake = { version = "2.9", features = ["chrono"] }
ratatui = "0.26"
crossterm = "0.27"