[project]
name = "omnimemory-compression"
version = "0.1.0"
description = "VisionDrop compression service for OmniMemory"
requires-python = ">=3.10"
dependencies = [
    # Core
    "numpy>=1.24.0",
    "httpx>=0.24.0",

    # FastAPI server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",

    # Core tokenizers
    "transformers>=4.35.0",
    "tokenizers>=0.15.0",
    "sentencepiece>=0.1.99",
    "tiktoken>=0.5.0",

    # Caching - best in class
    "cachetools>=5.3.0",  # L1 in-process
    "diskcache>=5.6.0",  # L2 persistent
    "pybloom-live>=4.0.0",  # Bloom filter
    "blake3>=0.3.0",  # Fast hashing
    "datasketch>=1.6.0",  # MinHash/SimHash

    # Validation
    "rouge-score>=0.1.2",
]

[project.optional-dependencies]
# API clients for online tokenization
online = [
    "anthropic>=0.34.0",
    "google-generativeai>=0.3.0",
    "boto3>=1.34.0",
    "redis>=5.0.0",
]

# Advanced validation
validation = [
    "bert-score>=0.3.13",
    "sacrebleu>=2.4.0",
]

# Enterprise features
enterprise = [
    "vllm>=0.4.0",
]

# All optional features
all = [
    "anthropic>=0.34.0",
    "google-generativeai>=0.3.0",
    "boto3>=1.34.0",
    "redis>=5.0.0",
    "bert-score>=0.3.13",
    "sacrebleu>=2.4.0",
    "vllm>=0.4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
