[project]
name = "omnimemory-embeddings"
version = "0.1.0"
description = "MLX-based embedding service for OmniMemory, optimized for Apple Silicon"
requires-python = ">=3.10"

[tool.uv]
dev-dependencies = [
    "mlx>=0.5.0",
    "numpy>=1.24.0",
    "safetensors>=0.4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "aiofiles>=23.0.0",
    "msgpack>=1.0.7",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
    "websockets>=12.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
