[project]
name = "omnimemory-evaluation"
version = "0.1.0"
description = "Comprehensive evaluation framework for OmniMemory with benchmark suites and A/B testing"
requires-python = ">=3.10"

[tool.uv]
dev-dependencies = [
    # FastAPI server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",

    # HTTP client for service integration
    "httpx>=0.25.0",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",

    # Evaluation metrics
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "sacrebleu>=2.4.0",
    "scikit-learn>=1.3.0",

    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",

    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
