[project]
name = "omnimemory-metrics-service"
version = "1.0.0"
description = "Real-time metrics collection and SSE streaming service for OmniMemory"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "sse-starlette>=1.8.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "qdrant-client>=1.7.0",
    "numpy>=1.24.0",
    "alembic>=1.12.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx-sse>=0.3.0",
]
