[project]
name = "omnimemory-procedural"
version = "0.1.0"
description = "Procedural memory engine for OmniMemory"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.4.2",
]

[tool.uv]
dev-dependencies = [
    "networkx>=3.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
